# cayweb778.gihub.io

./: README.md  download.js  index.html  install.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
scripts/: download.js
src/: App.vue  main.ts
src-tauri/reverse/: Cargo.toml  tauri.conf.json
src-tauri/reverse-ui/: pnpm-lock.yaml  vite.config.ts
src-tauri/reverse/src/: main.rs  main.rs.bak  short_car.rs
src-tauri/reverse/src/menue/: menu_hello.rs  mod.rs
src-tauri/reverse/src/rest/: hello.rs  mod.rs  print.rs
src-tauri/reverse/src/wa/: cmd.rs
src/router/: index.ts
src/store/modules/: hello.ts  main.ts
src/views/Config/: Config.vue  Hello.vue  index.vue
src/views/tuopan/: index.vue
