[package]
name = "tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }


[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
axum = { version = "0.5.17", features = ["ws", "headers"] }
tracing-subscriber = { version = "0.3.16", features = ["registry"] }
tracing = "0.1.37"
reverse-terminal = { path = "../reverse-terminal" }

futures = "0.3.8"
async-std = {version = "1.7.0", features = ["attributes"] }
ipp = "3.0.3"
textcode = "0.2.2"
uuid = "1.1.2"
base64 = "0.20.0-alpha.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
printers = { version = "1.1.0", features = [] }
tauri = { version = "1.2", features = ["api-all", "devtools", "global-shortcut", "icon-png", "system-tray", "updater"] }
anyhow = "1.0.65"
thiserror = "1.0.37"

[target.'cfg(not(target_os = "linux"))'.dependencies]
window-shadows = "0.2.0"
window-vibrancy = "0.3.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
